<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.3">
  <DUT Name="ST_TsConnectionInfo2Byte" Id="{5eef9db3-d8cb-4e90-9b93-147e1b808eaa}">
    <Declaration><![CDATA[TYPE ST_TsConnectionInfo2Byte :
(*******************************************************************************************************
Description			:	Connection information data of EtherCAT Slaves with 2 byte safe data 
Supported terminals : 	EK1914...
Date 				:	04.04.2016
********************************************************************************************************)
STRUCT

	nState 	 								:USINT;
	nDiag 		 							:USINT;
	nInOutSafeDataByte1						:BYTE;
	nInOutSafeDataByte2						:BYTE;
	
END_STRUCT
END_TYPE
(* End *)]]></Declaration>
  </DUT>
</TcPlcObject>